#23934 upgrading tika,  not working